--- a/hamiltonForNSiteMolecules.ipynb
+++ b/hamiltonForNSiteMolecules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "da4ca9ac-5935-479d-bf84-0f333561d753",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "3815067c-e837-4822-9ebe-628641c4ad91",
    "metadata": {},
    "outputs": [
@@ -93,10 +93,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1e11fc0a020>"
+       "<IPython.lib.display.IFrame at 0x294db8d4370>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
