--- a/GAMark3.ipynb
+++ b/GAMark3.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "id": "a5014de1-26c4-4d79-994c-5af181a5809c",
    "metadata": {},
    "outputs": [
@@ -65,21 +65,18 @@
      "output_type": "stream",
      "text": [
       "Best solution found:\n",
-      "[[0 1 0 ... 0 0 0]\n",
-      " [1 0 0 ... 0 1 1]\n",
-      " [0 0 0 ... 0 1 0]\n",
-      " ...\n",
-      " [0 0 0 ... 0 1 1]\n",
-      " [0 1 1 ... 1 0 1]\n",
-      " [0 1 0 ... 1 1 0]]\n",
-      "Fitness of the best solution: -189.65091543648273\n"
+      "[[0. 1. 1. 1. 0. 1. 1.]\n",
+      " [1. 0. 0. 1. 1. 1. 0.]\n",
+      " [1. 0. 0. 0. 1. 1. 1.]\n",
+      " [1. 1. 0. 0. 1. 0. 1.]\n",
+      " [0. 1. 1. 1. 0. 1. 0.]\n",
+      " [1. 1. 1. 0. 1. 0. 0.]\n",
+      " [1. 0. 1. 1. 0. 0. 0.]]\n",
+      "Fitness of the best solution: -11.06919452775108\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "\n",
     "def create_upper_triangular_binary_matrix(size):\n",
     "    '''\n",
     "    Cria uma matrix triangular superior, com diagonal principal igual a 0\n",
@@ -144,18 +141,18 @@
     "    \n",
     "    e = combined_matrix.shape[0]\n",
     "    \n",
+    "    #TIRAR ISSO DEPOIS\n",
     "    if e % 2 == 0:\n",
     "        ocupados = e // 2 \n",
     "    elif e % 2 == 1:\n",
-    "        ocupados = e // 2 + 1\n",
-    "    \n",
+    "        ocupados = (e // 2) + 1\n",
+    "    #CÁLCULO ENERGIA TOTAL SEGUNDO O MÉTODO DE HUCKEL\n",
     "    t_total = 0\n",
     "    for n in range(e//2):\n",
     "        t_total += 2 * autovalores[n]\n",
     "    if(e%2==1):\n",
     "        t_total += autovalores[e//2]\n",
     "    return t_total\n",
-    "\n",
     "\n",
     "# Tournament selection\n",
     "def tournament_selection(population, fitnesses, k=3):\n",
@@ -191,7 +188,7 @@
     "    size = upper_tri1.shape[0]\n",
     "    crossover_point = np.random.randint(1, size)\n",
     "    \n",
-    "    child_upper_tri = np.zeros_like(upper_tri1)\n",
+    "    child_upper_tri = np.zeros((size, size))\n",
     "    \n",
     "    # Copy upper part from parent1 and lower part from parent2\n",
     "    for i in range(size):\n",
@@ -241,22 +238,57 @@
     "    return best_individual, fitnesses\n",
     "\n",
     "# Parameters\n",
-    "pop_size = 20\n",
-    "matrix_size = 50\n",
-    "generations = 300\n",
+    "pop_size = 70\n",
+    "matrix_size = 7\n",
+    "generations = 1000\n",
     "\n",
     "# Run genetic algorithm\n",
     "best_solution, fit = genetic_algorithm(pop_size, matrix_size, generations)\n",
     "\n",
     "print(\"Best solution found:\")\n",
     "print(best_solution[1])  # Print the combined matrix\n",
-    "print(\"Fitness of the best solution:\", fitness(best_solution[1]))\n"
+    "print(\"Fitness of the best solution:\", fitness(best_solution[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "328cab76-7016-4c93-bfd8-81f66ce72c5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best solution found:\n",
+      "[[0. 1. 0. 0. 1. 1. 1.]\n",
+      " [1. 0. 1. 1. 1. 1. 0.]\n",
+      " [0. 1. 0. 1. 1. 0. 1.]\n",
+      " [0. 1. 1. 0. 0. 1. 0.]\n",
+      " [1. 1. 1. 0. 0. 0. 1.]\n",
+      " [1. 1. 0. 1. 0. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 1. 0.]]\n",
+      "Fitness of the best solution: -11.069194527751073\n"
+     ]
+    }
+   ],
+   "source": [
+    "pop_size = 70\n",
+    "matrix_size = 7\n",
+    "generations = 10\n",
+    "\n",
+    "# Run genetic algorithm\n",
+    "best_solution, fit = genetic_algorithm(pop_size, matrix_size, generations)\n",
+    "\n",
+    "print(\"Best solution found:\")\n",
+    "print(best_solution[1])  # Print the combined matrix\n",
+    "print(\"Fitness of the best solution:\", fitness(best_solution[1]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "328cab76-7016-4c93-bfd8-81f66ce72c5f",
+   "id": "d33636b4-0065-4b46-907b-8b50408670b3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -264,9 +296,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ilumpy",
    "language": "python",
-   "name": "python3"
+   "name": "ilumpy"
   },
   "language_info": {
    "codemirror_mode": {
@@ -278,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
