--- a/arquivo_principal_notebook.ipynb
+++ b/arquivo_principal_notebook.ipynb
@@ -32,7 +32,7 @@
    "id": "3fc0bb35",
    "metadata": {},
    "source": [
-    "<font size=3>O intuito deste trabalho é desenvolver um `Algoritmo Genético` que otimize a função `minimize_energy`, que busca a menor energia de uma molécula, de acordo com o método de Huckel, dado o número de átomos que a compõem, calculando todas as energias possíveis a partir de todas as combinações possíveis dado o número de átomos. A forma como essa função calcula a menor energia tende a ser custusa computacionalmente, como se pode imaginar. Devido a esse problema, uma otmização é necessária para que o custo computacional seja menor e possamos obter a menor energia da molécula almejada.</font>"
+    "<font size=3>O intuito deste trabalho é desenvolver um `Algoritmo Genético` que otimize a função `minimiza_energia`, que busca a menor energia de uma molécula, de acordo com o método de Huckel, dado o número de átomos que a compõem, calculando todas as energias possíveis a partir de todas as combinações possíveis dado o número de átomos. A forma como essa função calcula a menor energia tende a ser custusa computacionalmente, como se pode imaginar. Devido a esse problema, uma otmização é necessária para que o custo computacional seja menor e possamos obter a menor energia da molécula almejada.</font>"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "id": "af9502a7",
    "metadata": {},
    "source": [
-    "<font size=3>Na tentativa de resolver o problema de encontrar a menor energia com um custo computacional menor, desenvolvemos um código de algoritmo genético para otimizar o nosso objetivo, cuja `função objetivo` é encontrar a energia total. Ao final o algoritmo nos entregará o indivíduo com a menor `energia total` encontrada.</font>"
+    "<font size=3>Na tentativa de resolver o problema de encontrar a menor energia com um custo computacional menor, desenvolvemos um código de algoritmo genético para otimizar o nosso objetivo, cuja `função objetivo` é encontrar a energia total. Ao final, o algoritmo nos entregará o indivíduo com a menor `energia total` encontrada.</font>"
    ]
   },
   {
@@ -354,7 +354,9 @@
    "id": "56df1cce",
    "metadata": {},
    "source": [
-    "[1] Cassar, Daniel Roberto. GA 4.2 - Notebook Descobrindo a senha."
+    "[1] Cassar, Daniel Roberto. GA 4.2 - Notebook Descobrindo a senha.\n",
+    "\n",
+    "[2] Santos, Cauê Gomes Correia dos. "
    ]
   }
  ],
