Alterações parciais dos arquivos script e main

--- a/arquivo_principal_notebook.ipynb
+++ b/arquivo_principal_notebook.ipynb
@@ -32,14 +32,19 @@
     "<font size=3>O intuito deste trabalho é desenvolver um `Algoritmo Genético` que otimize a função objetivo `minimiza_energia`, que busca a menor energia de um conjunto de átomos qualquer. De acordo com o método de Huckel é possível calcular todas as energias possíveis a partir de todas as combinações possíveis dado apenas o número de átomos. A forma encontrada pelos alunos de como essa função calcula a menor energia tende a ser custosa computacionalmente, como se pode imaginar. Devido a esse problema, resolveu-se aplicar um algoritmo genético, de minimização, para que o custo computacional seja menor e que possamos obter sem testar todas as possibilidade, uma das menores energias do conjunto de átomos. Com o intuito de tornar mais claro o fato do código feito pelo aluno Cauê ser muito custoso computacionalmente, vamos demonstrar a equação que calcula a quantidade total de conformações possívels da molécula dado apenas o número de átomos:\n",
     "</font>\n",
     "\n",
-    "$$cT = 2^{\\frac{n(n-1)}{2}}$$\n",
+    "$$\\text{c_Total} = 2^{\\frac{n(n-1)}{2}}$$\n",
     "\n",
     "<font size=3>Onde cT é u número de Conformações Totais e n o número de átomos. Note que quando olhamos \n",
+    "    \n",
     "    Para um conjunto de 2 átomos, cT é igual a 2. \n",
-    "    Para n = 5, cT = 1024\n",
-    "    Para n = 7, cT = 2.09 x 10^(6) ou ~2 milhões\n",
-    "    Para n = 10, cT = 3.51 x 10^(13) ou ~35 trilhões\n",
-    "    Ou seja, cada átomo adicionado aumenta exponencialmente a quantidade de conformações totais. E isso é muito custoso. Foi necessário a utilização do HPC para calcular mais do que 7 átomos dado o poder computacional exigido. </font>"
+    "    \n",
+    "    Para n = 5, cT = 1024.\n",
+    "    \n",
+    "    Para n = 7, cT = 2.09 x 10^(6) ou ~2 milhões.\n",
+    "    \n",
+    "    Para n = 10, cT = 3.51 x 10^(13) ou ~35 trilhões.\n",
+    "    \n",
+    "Ou seja, cada átomo adicionado aumenta exponencialmente a quantidade de conformações totais. E isso é muito custoso. Foi necessário a utilização do HPC para calcular mais do que 7 átomos dado o poder computacional exigido."
    ]
   },
   {
@@ -82,6 +87,7 @@
    "metadata": {},
    "source": [
     "## 2 - Código inicial não-otimizado\n",
+    "### \"Nobody knows me like you do\" - Made For Me, Muni Long.\n",
     "___"
    ]
   },
@@ -129,6 +135,7 @@
    "metadata": {},
    "source": [
     "## 3 - Código atual otimizado\n",
+    "### \"O acaso vai me proteger\" - Epitáfio, Titãs\n",
     "___"
    ]
   },
@@ -137,7 +144,7 @@
    "id": "af9502a7",
    "metadata": {},
    "source": [
-    "<font size=3>Na tentativa de resolver o problema de encontrar a menor energia com um custo computacional menor, desenvolvemos um código de algoritmo genético para otimizar o nosso objetivo, cuja `função objetivo` é encontrar a energia total. Ao final, o algoritmo nos entregará o indivíduo com a menor `energia total` encontrada.</font>"
+    "<font size=3>Na tentativa de resolver o problema de encontrar a menor energia com um custo computacional menor, desenvolvemos um código de algoritmo genético para otimizar o nosso objetivo, cuja `função objetivo` é o cálculo da energia total. Ao final, o algoritmo nos entregará o indivíduo com a menor `energia total` encontrada. É importante comentar que não necessáriamente o código devolve o mínimo global, ou seja a menor eneriga de todas as conformações, mas devolve a menor energia dadas as opções que ele seleciona.</font>"
    ]
   },
   {
@@ -147,106 +154,16 @@
    "source": [
     "<font size=3>Nosso código contou com alterações nos operadores genéticos `cruzamento` e `mutação`, os quais adaptamos para resolver o nosso problema. Os operadores utilizados foram:</font>\n",
     "\n",
-    "<font size=3>- Seleção: seleção por torneio com 3 indivíduos.</font>\n",
+    "<font size=3>- Seleção: Seleção por torneio com 3 indivíduos.</font>\n",
     "\n",
     "\n",
-    "<font size=3>- Cruzamento: um novo cruzamento (verificar isso) que apenas altera a triangular superior ou inferior de uma matriz.</font>\n",
+    "<font size=3>- Cruzamento: Um novo cruzamento que apenas altera a matriz triangular superior.</font>\n",
     "\n",
     "\n",
-    "<font size=3>- Mutação: mutação simples, porém com a restrição de somente ocorrer fora e acima da diagonal principal.</font>\n",
+    "<font size=3>- Mutação: Mutação simples, porém com a restrição de somente ocorrer fora e acima da diagonal principal.</font>\n",
     "\n",
     "\n",
-    "<font size=3>- Hall da Fama: indivíduo com a menor energia total encontrada.</font>\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "d7cabeb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Mutacao (aparentemente atualizado)\n",
-    "# Mutate the matrix by flipping a randomly chosen element in the upper triangular part (excluding the main diagonal)\n",
-    "def mutate_upper_triangular_binary(individuos, chance_mutacao):\n",
-    "    '''\n",
-    "    Muta uma matrix triangular superior, trocando um elemento \n",
-    "    aleatório (fora da diagonal) de 0 para 1, ou vice-versa.\n",
-    "\n",
-    "    Arg: \n",
-    "        individuos: lista contendo as matrizes triangulares superiores\n",
-    "        chance_mutacao: float que define o limiar da chance de ocorrer mutação no indivíduo\n",
-    "        \n",
-    "    return: \n",
-    "        retorna uma matriz triangular superior com uma mutação\n",
-    "    '''\n",
-    "    size = 0\n",
-    "    for individuo in individuos:\n",
-    "        size = individuo.shape[0]\n",
-    "        if random.random() < chance_mutacao:\n",
-    "\n",
-    "            # Escolhe um elemento aleatório (tirando a diagonal)\n",
-    "            i = np.random.randint(0, size - 1)\n",
-    "            j = np.random.randint(i + 1, size)  # Assegura que estará acima da diagonal principal\n",
-    "\n",
-    "            # Flipa o valor do elemento escolhido\n",
-    "            individuo[i, j] = 1 - individuo[i, j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "2379a3c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Crossover function\n",
-    "def crossover(parent1, parent2, chance_cruzamento):\n",
-    "    '''\n",
-    "    Realiza o cruzamento entre dois pais para gerar um filho.\n",
-    "\n",
-    "    Args:\n",
-    "        parent1: Tupla contendo a matriz triangular superior e a matriz simétrica correspondente do primeiro pai.\n",
-    "        parent2: Tupla contendo a matriz triangular superior e a matriz simétrica correspondente do segundo pai.\n",
-    "    \n",
-    "    return: \n",
-    "        retorna uma tupla contendo a matriz triangular superior e a matriz simétrica correspondente do filho gerado.\n",
-    "    '''\n",
-    "    \n",
-    "    upper_tri1, _ = parent1\n",
-    "    upper_tri2, _ = parent2\n",
-    "    if random.random() < chance_cruzamento:\n",
-    "        child1 = []\n",
-    "        child2 = []\n",
-    "        size = upper_tri1.shape[0]\n",
-    "        \n",
-    "        crossover_point = np.random.randint(1, size)\n",
-    "        \n",
-    "        child1 = np.zeros((size, size)) #criando matriz de zeros para o filho 1\n",
-    "        child2 = np.zeros((size, size)) #criando matriz de zeros para o filho 2\n",
-    "        \n",
-    "\n",
-    "        # Copy upper part from parent1 and lower part from parent2\n",
-    "        for i in range(size):\n",
-    "            for j in range(size):\n",
-    "                if j >= crossover_point:\n",
-    "                    child1[i, j] = upper_tri1[i, j]\n",
-    "                    child2[i, j] = upper_tri2[i, j]\n",
-    "                else:\n",
-    "                    child1[i, j] = upper_tri2[i, j]\n",
-    "                    child2[i, j] = upper_tri2[i, j]\n",
-    "\n",
-    "        child1_combined = child1 + child1.T\n",
-    "        child2_combined = child2 + child2.T\n",
-    "        \n",
-    "        filho1 = (child1, child1_combined)\n",
-    "        filho2 = (child2, child2_combined)\n",
-    "        \n",
-    "        return filho1, filho2\n",
-    "    \n",
-    "    else:\n",
-    "        return parent1, parent2\n",
-    "    "
+    "<font size=3>- Hall da Fama: Indivíduo com a menor energia total encontrada.</font>\n"
    ]
   },
   {
@@ -256,7 +173,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Genetic Algorithm\n",
     "def genetic_algorithm(pop_size, matrix_size, generations, chance_mutacao, chance_cruzamento):\n",
     "    # Initialize population\n",
     "    population = inicializador(pop_size, matrix_size)\n",
@@ -347,9 +263,9 @@
    "id": "56df1cce",
    "metadata": {},
    "source": [
-    "[1] Cassar, Daniel Roberto. GA 4.2 - Notebook Descobrindo a senha.\n",
+    "[1] CASSAR, D. - GA 4.2 - Notebook Descobrindo a senha.\n",
     "\n",
-    "[2] Santos, Cauê Gomes Correia dos. "
+    "[2] SANTOS, C. ; LIMA, F. - Hamiltonian for n-site molecules."
    ]
   }
  ],
