--- a/arquivo_principal_notebook.ipynb
+++ b/arquivo_principal_notebook.ipynb
@@ -65,20 +65,14 @@
    "source": [
     "import random\n",
     "import numpy as np\n",
-    "from scripts import create_upper_triangular_binary_matrix as create_traingular_umatrix\n",
-    "from scripts import testar_matrizes\n",
-    "from scripts import minimiza_energia\n",
+    "from scripts import criaTriu\n",
+    "from scripts import testaMatriz\n",
+    "from scripts import energiaMin\n",
     "from scripts import fitness as funcao_objetivo\n",
-    "from scripts import initialize_population as inicializador#initialize_population\n",
-    "from scripts import tournament_selection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7f119cdc",
-   "metadata": {},
-   "source": [
-    "<font size=3>A função `drawn` foi desenvolvida para plotar o grafo da molécula de menor energia que resultou da função `minimiza_energia` dado um conjunto de átomos.</font>"
+    "from scripts import iniciaPopu\n",
+    "from scripts import selecaoTorneio\n",
+    "from scripts import cruzamento\n",
+    "from scripts import mutaTriu"
    ]
   },
   {
@@ -96,7 +90,7 @@
    "id": "23ee765f",
    "metadata": {},
    "source": [
-    "<font size=3>A função `minimiza_energia` recebe a quantidade de átomos que estarão presentes na molécula. A partir desses dados ela calcula a quantidade de possíveis arranjos entre esse átomos e gera todas as possíveis matrizes, que são `binárias`. Com as matrizes geradas na função acima, a função `testa_matrizes` recebe as matrizes e calcula a energia total (`t_total`) de cada matriz e rotorna a `melhor matriz`, junto a seus `autovalores (em ordem crescente)` e a `menor energia encontrada`.</font>"
+    "<font size=3>A função `energiaMin` recebe a quantidade de átomos que estarão presentes na molécula. A partir desses dados ela calcula a quantidade de possíveis arranjos entre esse átomos e gera todas as possíveis matrizes, que são `binárias`. Com as matrizes geradas na função acima, a função `testaMatriz` recebe as matrizes e calcula a energia total (`t_total`) de cada matriz e rotorna a `melhor matriz`, junto a seus `autovalores (em ordem crescente)` e a `menor energia encontrada`.</font>"
    ]
   },
   {
@@ -125,8 +119,8 @@
     }
    ],
    "source": [
-    "matrizes = minimiza_energia(6)\n",
-    "A = testar_matrizes(matrizes)"
+    "matrizes = energiaMin(6)\n",
+    "A = testaMatriz(matrizes)"
    ]
   },
   {
@@ -173,43 +167,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def genetic_algorithm(pop_size, matrix_size, generations, chance_mutacao, chance_cruzamento):\n",
-    "    # Initialize population\n",
-    "    population = inicializador(pop_size, matrix_size)\n",
+    "def genetic_algorithm(pop_size, matrix_size, geracoes, chanceMutacao, chanceCruzamento):\n",
+    "    # Initialize populacao\n",
+    "    populacao = iniciaPopu(pop_size, matrix_size)\n",
     "    \n",
-    "    for generation in range(generations):\n",
-    "        # Evaluate fitness of the population\n",
-    "        fitnesses = [funcao_objetivo(combined_matrix) for _, combined_matrix in population]\n",
+    "    for geracao in range(geracoes):\n",
+    "        # Evaluate fitness of the populacao\n",
+    "        valoresFit = [funcao_objetivo(hamiltoniano) for _, hamiltoniano in populacao]\n",
     "        \n",
-    "        new_population = []\n",
+    "        novaPop = []\n",
     "        \n",
-    "        # Generate new population\n",
+    "        # Generate new populacao\n",
     "        for _ in range(pop_size // 2):\n",
     "            # Select parents\n",
-    "            parent1 = tournament_selection(population, fitnesses)\n",
-    "            parent2 = tournament_selection(population, fitnesses)\n",
+    "            pai1 = selecaoTorneio(populacao, valoresFit)\n",
+    "            pai2 = selecaoTorneio(populacao, valoresFit)\n",
     "            \n",
-    "            # Crossover\n",
-    "            child1, child2 = crossover(parent1, parent2, chance_cruzamento)\n",
+    "            # cruzamento\n",
+    "            child1, child2 = cruzamento(pai1, pai2, chanceCruzamento)\n",
     "            \n",
     "            \n",
     "            # Mutate\n",
     "            lista_filhos = [child1[0], child2[0]]\n",
     "            \n",
-    "            mutate_upper_triangular_binary(lista_filhos, chance_mutacao)#, child1[0] + child1[0].T)\n",
-    "            #child2 = (mutate_upper_triangular_binary(child2[0]), child2[0] + child2[0].T)\n",
+    "            mutaTriu(lista_filhos, chanceMutacao)\n",
     "            \n",
-    "            new_population.extend([child1, child2])\n",
-    "            #print(new_population)\n",
+    "            novaPop.extend([child1, child2])\n",
     "        \n",
-    "        # Replace old population with new population\n",
-    "        population = new_population\n",
+    "        # Replace old populacao with new populacao\n",
+    "        populacao = novaPop\n",
     "    \n",
-    "    # Final population fitness evaluation\n",
-    "    fitnesses = [funcao_objetivo(combined_matrix) for _, combined_matrix in population]\n",
-    "    best_individual = population[np.argmin(fitnesses)]\n",
+    "    # Final populacao fitness evaluation\n",
+    "    valoresFit = [funcao_objetivo(hamiltoniano) for _, hamiltoniano in populacao]\n",
+    "    ganhador = populacao[np.argmin(valoresFit)]\n",
     "    \n",
-    "    return best_individual, fitnesses"
+    "    return ganhador, valoresFit"
    ]
   },
   {
@@ -239,15 +231,15 @@
    "source": [
     "pop_size = 100\n",
     "matrix_size = 7\n",
-    "generations = 80\n",
-    "CHANCE_CRUZAMENTO = 0.5\n",
-    "CHANCE_MUTACAO = 0.2\n",
-    "# Run genetic algorithm\n",
-    "best_solution, fit = genetic_algorithm(pop_size, matrix_size, generations, CHANCE_MUTACAO, CHANCE_CRUZAMENTO)\n",
+    "geracoes = 80\n",
+    "chanceCruzamento = 0.5\n",
+    "chanceMutacao = 0.2\n",
+    "\n",
+    "melhorMatriz, fit = genetic_algorithm(pop_size, matrix_size, geracoes, chanceMutacao, chanceCruzamento)\n",
     "\n",
     "print(\"Best solution found:\")\n",
-    "print(best_solution[1])  # Print the combined matrix\n",
-    "print(\"Fitness of the best solution:\", funcao_objetivo(best_solution[1]))"
+    "print(melhorMatriz[1])\n",
+    "print(\"Fitness of the best solution:\", funcao_objetivo(melhorMatriz[1]))"
    ]
   },
   {
