Atualizando detalhes da referencia

--- a/GA_forNsiteMolecule.ipynb
+++ b/GA_forNsiteMolecule.ipynb
@@ -276,7 +276,7 @@
    "source": [
     "## Referências Bibliográficas\n",
     "<br>[1] Cassar, Daniel Roberto. GA 4.2 - Notebook Descobrindo a senha.</br>\n",
-    "<br>[2]Santos, C. e Lima, F. </br>\n",
+    "<br>[2]Santos, C. e Lima, F. - Hamiltonian for n-site molecules </br>\n",
     "<br>[3] Cassar, Daniel Roberto. ATP-303 GA 2.3 - Notebook algoritmo genético</br> \n",
     "<br>[4] numpy.org - Função ArgMin do Numpyhttps: //numpy.org/doc/stable/reference/generated/numpy.argmin.html </br>\n",
     "<br>[5] docs.python.org - Função Format e Zfill: https://docs.python.org/pt-br/3/tutorial/inputoutput.html </br>\n",
