--- a/GA_forNsiteMolecule.ipynb
+++ b/GA_forNsiteMolecule.ipynb
@@ -198,7 +198,7 @@
     "            # Mutate\n",
     "            lista_filhos = [child1[0], child2[0]]\n",
     "            \n",
-    "            mutaTriu(lista_filhos, chanceMutacao)\n",
+    "            mutaTriu(lista_filhos, chanceMutacao) #[13]\n",
     "            \n",
     "            novaPop.extend([child1, child2])\n",
     "        \n",
@@ -286,7 +286,8 @@
     "<br>[9] PrOgRaMaNdO - 08 - Algoritmos Genéticos - Métodos de Seleção de Indivíduos: https://www.youtube.com/watch?v=zQLuryIF-pU</br>\n",
     "<br>[10] StackOverFlow.com - How to write LaTeX in IPython Notebook?: https://stackoverflow.com/questions/13208286/how-to-write-latex-in-ipython-notebook</br>\n",
     "<br>[11] GeeksForGeeks - Python | random.sample() function : https://www.geeksforgeeks.org/python-random-sample-function/</br>\n",
-    "<br> [12] Fernando dos Santos - Algoritmos Genéticos: Roleta (vídeo extra) : https://www.youtube.com/watch?v=c2uPOs3VawU </br>"
+    "<br> [12] Fernando dos Santos - Algoritmos Genéticos: Roleta (vídeo extra) : https://www.youtube.com/watch?v=c2uPOs3VawU </br>",
+    "<br> [13] numpy.org - Numpy.triu: https://numpy.org/doc/stable/reference/generated/numpy.triu.html </br>"
    ]
   },
   {
